--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ramlo",
   "version": "0.0.2",
-  "description": "",
+  "description": "Documentation generator for RAML 1.0",
   "main": "ramlo.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -28,6 +28,6 @@
     "ramlo": "ramlo.js"
   },
   "engines": {
-    "node": ">= 5.6.x"
+    "node": ">= 5.8.x"
   }
 }
