--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "commander": "^2.9.0",
     "highlight.js": "^9.2.0",
     "jade": "^1.11.0",
+    "lodash": "^4.6.1",
     "node-sass": "^3.4.2",
     "raml-1-parser": "0.1.0-beta.6"
   },
