--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ramlo",
-  "version": "0.0.3",
-  "description": "Documentation generator for RAML 1.0",
+  "version": "0.1.0",
+  "description": "Documentation generator for RESTful API written in RAML",
   "main": "ramlo.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/PGSSoft/ramlo#readme",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.2",
+    "chalk": "^1.1.1",
     "commander": "^2.9.0",
     "highlight.js": "^9.2.0",
     "jade": "^1.11.0",
