--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "highlight.js": "^9.2.0",
     "jade": "^1.11.0",
     "lodash": "^4.6.1",
+    "markdown": "^0.5.0",
     "node-sass": "^3.4.2",
     "raml-1-parser": "0.1.0-beta.10"
   },
