--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
   },
   "engines": {
     "node": ">= 5.8.x"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "karma": "^0.13.22",
+    "mocha": "^2.5.3"
   }
 }
