--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   "homepage": "https://github.com/PGSSoft/ramlo#readme",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.2",
-    "chalk": "^1.1.1",
+    "chalk": "^1.1.3",
     "commander": "^2.9.0",
-    "highlight.js": "^9.2.0",
+    "highlight.js": "^9.4.0",
     "jade": "^1.11.0",
-    "lodash": "^4.6.1",
-    "node-sass": "^3.4.2",
-    "raml-1-parser": "0.1.0-beta.10"
+    "lodash": "^4.13.1",
+    "node-sass": "^3.7.0",
+    "raml-1-parser": "^0.2.21"
   },
   "preferGlobal": true,
   "bin": {
