--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,13 @@
-root=true
-[*]
-indent_style=space
-charset=utf-8
+# editorconfig.org
+root = true
 
-[*.{html,scss,css}]
-indent_size=4
-[*.js]
-indent_size=4
+[*]
+indent_style = space
+indent_size = 4
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
