--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jade": "^1.11.0",
     "lodash": "^4.13.1",
     "markdown": "^0.5.0",
-    "raml-1-parser": "^0.2.27"
+    "raml-1-parser": "^0.2.27",
+    "node-sass": "^3.8.0"
   },
   "preferGlobal": true,
   "bin": "./bin/ramlo.js",
@@ -40,7 +41,6 @@
     "bootstrap": "^4.0.0-alpha.2",
     "chai": "^3.5.0",
     "karma": "^1.1.1",
-    "mocha": "^2.5.3",
-    "node-sass": "^3.8.0"
+    "mocha": "^2.5.3"
   }
 }
