--- a/package.json
+++ b/package.json
@@ -1,46 +1,46 @@
 {
-  "name": "ramlo",
-  "version": "0.2.1",
-  "description": "Documentation generator for RESTful API written in RAML",
-  "keywords": [
-    "raml"
-  ],
-  "scripts": {
-    "build": "node_modules/.bin/node-sass --output-style compressed src/main.scss > src/main.css",
-    "prepublish": "",
-    "release": "",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/PGSSoft/ramlo.git"
-  },
-  "author": "Kamil Zasada",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/PGSSoft/ramlo/issues"
-  },
-  "homepage": "https://github.com/PGSSoft/ramlo#readme",
-  "dependencies": {
-    "chalk": "^1.1.3",
-    "commander": "^2.9.0",
-    "highlight.js": "^9.5.0",
-    "jade": "^1.11.0",
-    "lodash": "^4.13.1",
-    "markdown": "^0.5.0",
-    "raml-1-parser": "^0.2.27"
-  },
-  "preferGlobal": true,
-  "bin": "./bin/ramlo.js",
-  "engines": {
-    "node": ">= 5.8.x",
-    "npm": ">= 3.8.x"
-  },
-  "devDependencies": {
-    "bootstrap": "^4.0.0-alpha.2",
-    "chai": "^3.5.0",
-    "karma": "^1.1.1",
-    "mocha": "^2.5.3",
-    "node-sass": "^3.8.0"
-  }
+    "name": "ramlo",
+    "version": "0.2.1",
+    "description": "Documentation generator for RESTful API written in RAML",
+    "keywords": [
+        "raml"
+    ],
+    "scripts": {
+        "build": "node_modules/.bin/node-sass --output-style compressed src/main.scss > src/main.css",
+        "prepublish": "",
+        "release": "",
+        "test": "node_modules/.bin/mocha test"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/PGSSoft/ramlo.git"
+    },
+    "author": "Kamil Zasada",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/PGSSoft/ramlo/issues"
+    },
+    "homepage": "https://github.com/PGSSoft/ramlo#readme",
+    "dependencies": {
+        "chalk": "^1.1.3",
+        "commander": "^2.9.0",
+        "highlight.js": "^9.5.0",
+        "jade": "^1.11.0",
+        "lodash": "^4.13.1",
+        "markdown": "^0.5.0",
+        "raml-1-parser": "^0.2.27"
+    },
+    "preferGlobal": true,
+    "bin": "./bin/ramlo.js",
+    "engines": {
+        "node": ">= 5.8.x",
+        "npm": ">= 3.8.x"
+    },
+    "devDependencies": {
+        "bootstrap": "^4.0.0-alpha.2",
+        "chai": "^3.5.0",
+        "karma": "^1.1.1",
+        "mocha": "^2.5.3",
+        "node-sass": "^3.8.0"
+    }
 }
